--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ezCloudHotelManager</title>
+</head>
+<body>
+	<h2>BETA-BUILD</h2>
+<!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestCompassPro.plist">FengShuiCompassPro 1.0</a></body>
+<br>
+<br>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestThuocThay.plist">ThuocThay 1.0</a></body>
+<br>
+<br>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestVanSo.plist">VanSo 1.0</a></body>
+<br>
+<br>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestThoCung.plist">ThoCung 1.0</a></body>
+<br>
+<br>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestArchCompass.plist">ArchCompass 1.0</a></body>
+<br>
+<br>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestKhaiVan.plist">Khai Vận 1.0</a></body>
+<br>
+<br> -->
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestezcloud.plist">Install ezCloud HotelManager</a>
+
+</body>
+</html>
