update link setup

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestKhaiVan.plist">Khai Vận 1.0</a></body>
 <br>
 <br> -->
-<a href="itms-services://?action=download-manifest&amp;url=https://anhnd.github.io/manifestezcloud.plist">Install ezCloud HotelManager</a>
+<a href="itms-services://?action=download-manifest&amp;url=http://anhnd.tech/manifestezcloud.plist">Install ezCloud HotelManager</a>
 
 </body>
 </html>
