change to compass

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 	<h2>BETA-BUILD</h2>
-<!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestCompassPro.plist">FengShuiCompassPro 1.0</a></body>
-<br>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestCompassPro.plist">FengShuiCompassPro 1.0</a></body>
+<!-- <br>
 <br>
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestThuocThay.plist">ThuocThay 1.0</a></body>
 <br>
@@ -23,7 +23,7 @@
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestKhaiVan.plist">Khai Vận 1.0</a></body>
 <br>
 <br> -->
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestezcloud.plist">Install ezCloud HotelManager</a>
+<!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestezcloud.plist">Install ezCloud HotelManager</a> -->
 
 </body>
 </html>
