--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h2>BETA-BUILD</h2>
 <!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestCompassPro.plist">FengShuiCompassPro 1.0</a></body> -->
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/bln247k7dei8pma/manifestAR.plist">Augumented Reality 1.0</a></body>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/71wo7u83q7vzgzi/manifestOCR.plist">OCR 1.0</a></body>
 <!-- <br>
 <br>
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestThuocThay.plist">ThuocThay 1.0</a></body>
