--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h2>BETA-BUILD</h2>
 <!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestCompassPro.plist">FengShuiCompassPro 1.0</a></body> -->
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/71wo7u83q7vzgzi/manifestOCR.plist">OCR 1.0</a></body>
+<!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/71wo7u83q7vzgzi/manifestOCR.plist">OCR 1.0</a></body> -->
 <!-- <br>
 <br>
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestThuocThay.plist">ThuocThay 1.0</a></body>
@@ -24,7 +24,7 @@
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestKhaiVan.plist">Khai Vận 1.0</a></body>
 <br>
 <br> -->
-<!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestezcloud.plist">Install ezCloud HotelManager</a> -->
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/td9fjbl4t4rs4lq/manifestezcloud.plist">Install ezCloud HotelManager</a>
 
 </body>
 </html>
