--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ezCloudHotelManager</title>
 </head>
 <body>
-	<h2>BETA-BUILD</h2>
+	<h1>BETA-BUILD</h1>
 <!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestCompassPro.plist">FengShuiCompassPro 1.0</a></body> -->
 <!-- <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/71wo7u83q7vzgzi/manifestOCR.plist">OCR 1.0</a></body> -->
 <!-- <br>
@@ -24,7 +24,9 @@
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestKhaiVan.plist">Khai Vận 1.0</a></body>
 <br>
 <br> -->
+<h2>iOS version</h2>
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/td9fjbl4t4rs4lq/manifestezcloud.plist">Install ezCloud HotelManager</a>
-
+<h2>Android version</h2>
+<a href="https://dl.dropboxusercontent.com/s/arr97t3njwre2u7/ezCloudHotelManager.apk">Install ezCloud HotelManager Android</a>
 </body>
 </html>
