--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 <h2>Android version</h2>
 <a href="https://dl.dropboxusercontent.com/s/arr97t3njwre2u7/ezCloudHotelManager.apk">Install ezCloud HotelManager Android</a>
 
-<h1>AR Demo</h1>
+<h1>VPApp Demo</h1>
 <h2>iOS version</h2>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/bln247k7dei8pma/manifestAR.plist">Install AR Demo</a>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/hmkpa70ewvxy14k/manifestRV.plist">Install VPApp Demo</a>
+
 </body>
 </html>
