update link vinpearl

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/u/52821610/manifestKhaiVan.plist">Khai Vận 1.0</a></body>
 <br>
 <br> -->
-<h2>iOS version</h2>
+<!-- <h2>iOS version</h2>
 <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/td9fjbl4t4rs4lq/manifestezcloud.plist">Install ezCloud HotelManager</a>
 <h2>Android version</h2>
-<a href="https://dl.dropboxusercontent.com/s/arr97t3njwre2u7/ezCloudHotelManager.apk">Install ezCloud HotelManager Android</a>
+<a href="https://dl.dropboxusercontent.com/s/arr97t3njwre2u7/ezCloudHotelManager.apk">Install ezCloud HotelManager Android</a> -->
 
-<h1>VPApp Demo</h1>
+<h1>Vinpearl iOS</h1>
 <h2>iOS version</h2>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/hmkpa70ewvxy14k/manifestRV.plist">Install VPApp Demo</a>
+<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/hmkpa70ewvxy14k/Vinpearl.plist">Install Vinpearl</a>
 
 </body>
 </html>
