--- a/hotelismo.html
+++ b/hotelismo.html
@@ -32,7 +32,7 @@
      Header Unit (LOGO & Slogan)
     ==========================================================================-->
 <div class="row-fluid">
-	<div class="span12 slogan text-center">
+	<div class="span12 slogan text-center"></div>
 		<h1><HOTELISMOT/h1>
 	</div>
 </div>
@@ -45,8 +45,9 @@
     ==========================================================================-->
 
 <div class="row-fluid">
-	<div class="span12 text-center" style="margin-top:2%;">
-		<a href="https://dl.dropboxusercontent.com/s/cq3a8fm34se5l1j/Hotelismo.apk"><img class="span2" src="image/google-play.png" alt="Google play"></a>
+    <div class="span12 text-center" style="margin-top:2%;">
+        <a href="https://dl.dropboxusercontent.com/s/cq3a8fm34se5l1j/Hotelismo.apk"><img class="span2" src="image/google-play.png" alt="Google play"></a>
+        <a href=""><img class="span2 offset4" src="image/app-store.png" alt="App store" style="margin-right:2%;"></a>
 	</div>
 </div>
 
