--- a/hotelismo.html
+++ b/hotelismo.html
@@ -47,7 +47,7 @@
 <div class="row-fluid">
     <div class="span12 text-center" style="margin-top:2%;">
         <a href="https://dl.dropboxusercontent.com/s/cq3a8fm34se5l1j/Hotelismo.apk"><img class="span2" src="image/google-play.png" alt="Google play"></a>
-        <a href=""><img class="span2 offset4" src="image/app-store.png" alt="App store" style="margin-right:2%;"></a>
+        <a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/0frxzd556hc7izw/Hotelismo.plist"><img class="span2 offset4" src="image/app-store.png" alt="App store" style="margin-right:2%;"></a>
 	</div>
 </div>
 
