--- a/xaydungso.html
+++ b/xaydungso.html
@@ -28,7 +28,36 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-	<h1>ANHND.TECH</h1>
+<!--==========================================================================
+     Header Unit (LOGO & Slogan)
+    ==========================================================================-->
+<div class="row-fluid">
+	<div class="span12 slogan text-center">
+		<img class="logo" src="image/logo.jpg" alt="logo">
+	</div>
+</div>
+
+
+
+
+<!--==========================================================================
+     Connect your app with url to store.
+    ==========================================================================-->
+
+<div class="row-fluid">
+	<div class="span12 text-center" style="margin-top:2%;">
+		<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/hmkpa70ewvxy14k/Vinpearl.plist"><img class="span2 offset4" src="image/app-store.png" alt="App store" style="margin-right:2%;"></a>
+		<a href="https://dl.dropboxusercontent.com/s/i9tx46i8d09ssbg/XDS.apk"><img class="span2" src="image/google-play.png" alt="Google play"></a>
+	</div>
+</div>
+
+
+
+
+<!--==========================================================================
+     Social Network Unit
+    ==========================================================================-->
+
 
 
     </body>
