fix support erd

--- a/erdtracker/index.html
+++ b/erdtracker/index.html
@@ -43,7 +43,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">ERD Tracker is an app helping you track your nodes' ONLINE status for the Battle of Nodes event of Elrond Network. See you on the battle field !. If you need any support please contact me via email: anhnd@anhnd.tech
+            <h1 class="mb-5">ERD Tracker is an app helping you track your nodes' ONLINE status for the Battle of Nodes event of Elrond Network. See you on the battle field ! If you need any support please contact me via email: anhnd@anhnd.tech
             </h1>
             <a href="mailto: anhnd@anhnd.tech" class="btn btn-outline btn-xl js-scroll-trigger">Contact Me!</a>
           </div>
